<resources>
    <string name="app_name">SwipingApplication</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Content Descriptions -->
    <string name="content_description_image_background">Background Image</string>
    <string name="content_description_image_logo">Logo Image</string>

    <!-- Login Activity -->
    <string name="activity_login_btn_login">Login</string>
    <string name="activity_login_btn_login_processing">Logging in...</string>
    <string name="activity_login_hint_email">Email</string>
    <string name="activity_login_hint_password">Password</string>
    <string name="activity_login_txt_create_account">Are you joining us? Lets create a account</string>

    <!-- Register Activity -->
    <string name="activity_register_btn_sign_up">Sign Up</string>
    <string name="activity_register_btn_sign_up_processing">Signing up...</string>
    <string name="activity_register_txt_sign_up">Sign Up</string>
    <string name="activity_register_txt_terms_and_conditions">By clicking \'Sign Up\' you are agreeing to our Terms and Conditions</string>
    <string name="activity_register_hint_full_name">Full Name</string>
    <string name="activity_register_hint_email">Email</string>
    <string name="activity_register_hint_password">Password</string>
    <string name="activity_register_hint_confirm_password">Confirm Password</string>

    <!-- Terms and Conditions Activity -->
    <string name="activity_terms_and_conditions_caption">Terms and Conditions</string>

    <!-- Payment Fragments -->
    <string name="fragment_payment_step_amount">Amount</string>
    <string name="fragment_payment_step_payment">Payment</string>
    <string name="fragment_payment_step_receipt">Receipt</string>

    <string name="fragment_payment_amount_btn_payment">Payment</string>
    <string name="fragment_payment_amount_label_amount">Amount</string>
    <string name="fragment_payment_amount_error_amount_missing">Please specify the amount</string>

    <string name="fragment_payment_payment_txt_amount">Amount</string>
    <string name="fragment_payment_payment_btn_confirm_payment">Confirm Payment</string>
    <string name="fragment_payment_payment_label_cardholder">Cardholder</string>
    <string name="fragment_payment_payment_label_card_number">Card number</string>
    <string name="fragment_payment_payment_label_expire_date">Expire date</string>
    <string name="fragment_payment_payment_label_cvc">CVC</string>

    <!-- Drawer Items -->
    <string name="drawer_item_persistent_compact_header">PersistentHeader Drawer</string>
    <string name="drawer_item_persistent_compact_header_desc">Smaller persistent account header</string>
    <string name="drawer_item_compact_header">CompactHeader Drawer</string>
    <string name="drawer_item_compact_header_desc">Smaller account header</string>
    <string name="drawer_item_action_bar_drawer">ActionBar Drawer</string>
    <string name="drawer_item_action_bar_drawer_desc">Shows how to use with an actionbar</string>
    <string name="drawer_item_multi_drawer">Multi Drawer</string>
    <string name="drawer_item_multi_drawer_desc">Left and Right side drawer</string>
    <string name="drawer_item_non_translucent_status_drawer">NonTranslucentStatus Drawer</string>
    <string name="drawer_item_non_translucent_status_drawer_desc">Drawer below statusBar</string>
    <string name="drawer_item_advanced_drawer">Advanced Drawer</string>
    <string name="drawer_item_advanced_drawer_desc">More advanced drawer features</string>
    <string name="drawer_item_keyboard_util_drawer">KeyboardUtil Drawer</string>
    <string name="drawer_item_keyboard_util_drawer_desc">KeyboardUtil to (fix) adjustResize</string>
    <string name="drawer_item_embedded_drawer">Embedded Drawer</string>
    <string name="drawer_item_embedded_drawer_desc">Embed the drawer anywhere</string>
    <string name="drawer_item_mini_drawer">MiniDrawer</string>
    <string name="drawer_item_mini_drawer_desc">Always visible MiniDrawer</string>
    <string name="drawer_item_fullscreen_drawer">FullScreen Drawer</string>
    <string name="drawer_item_fullscreen_drawer_desc">Drawer in FullScreen activity</string>
    <string name="drawer_item_custom_container_drawer">CustomContainer Drawer</string>
    <string name="drawer_item_custom_container_drawer_desc">Drawer in different view hirachy</string>
    <string name="drawer_item_menu_drawer">Menu Drawer</string>
    <string name="drawer_item_menu_drawer_desc">Drawer from menu.xml</string>
    <string name="drawer_item_fragment_drawer">Fragment Drawer</string>
    <string name="drawer_item_fragment_drawer_desc">Use drawer within fragments</string>
    <string name="drawer_item_collapsing_toolbar_drawer">CollapsingToolbar Drawer</string>
    <string name="drawer_item_collapsing_toolbar_drawer_desc">Uses a CollapsingToolbarLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer">CrossfadeDrawerLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer_desc">PREVIEW of a CrossfadeDrawerLayout</string>

    <string name="drawer_item_menu_drawer_item">Menu Drawer Item</string>
    <string name="drawer_item_menu_drawer_item_desc">Sample menu item with overflow button</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string name="newgame">A new name</string>

</resources>
