<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/step_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:weightSum="3">

        <TextView style="@style/Text.StepIndicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_payment_step_amount"/>

        <TextView style="@style/Text.StepIndicator.Active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_payment_step_payment"/>

        <TextView style="@style/Text.StepIndicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_payment_step_receipt"/>

    </LinearLayout>

    <LinearLayout style="@style/Layout.Padding"
        android:id="@+id/payment_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/step_container"
        android:layout_above="@+id/btn_container">

        <TextView style="@style/Text.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_amount"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView style="@style/InputBox.Label"
                    android:layout_width="match_parent"
                    android:text="@string/fragment_payment_payment_label_cardholder"/>

                <TextView style="@style/InputBox.Label"
                    android:layout_width="match_parent"
                    android:text="@string/fragment_payment_payment_label_card_number"/>

                <TextView style="@style/InputBox.Label"
                    android:layout_width="match_parent"
                    android:text="@string/fragment_payment_payment_label_cvc"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText style="@style/InputBox.Value"
                    android:id="@+id/input_cardholder"
                    android:layout_width="match_parent"
                    android:inputType="textCapWords"/>

                <com.example.swipingapp.customViews.input.InputCardNumber style="@style/InputBox.Value"
                    android:id="@+id/input_card_number"
                    android:layout_width="match_parent"
                    android:inputType="number"/>

                <EditText style="@style/InputBox.Value"
                    android:id="@+id/input_cvc"
                    android:layout_width="100dp"
                    android:inputType="number"/>

            </LinearLayout>

        </LinearLayout>

        <!-- The back button does not belong here -->
        <Button style="@style/Button"
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Back"/>

    </LinearLayout>

    <LinearLayout style="@style/Layout.Padding"
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button style="@style/Button"
            android:id="@+id/btn_confirm_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_payment_payment_btn_confirm_payment"/>

    </LinearLayout>

</RelativeLayout>