<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/Layout.Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/step_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:weightSum="3">

        <TextView style="@style/Text.StepIndicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_payment_step_amount"/>

        <TextView style="@style/Text.StepIndicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_payment_step_payment"/>

        <TextView style="@style/Text.StepIndicator.Active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_payment_step_receipt"/>

    </LinearLayout>

    <LinearLayout style="@style/Layout.Padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/step_container">

        <TextView style="@style/Text.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Receipt..."/>

    </LinearLayout>

</RelativeLayout>